--- a/style.css
+++ b/style.css
@@ -9,7 +9,6 @@ body {
   background-attachment: fixed;
   font-family: 'Bon-Mono';
   background-color: rgb(255, 255, 255);
-  position: relative;
   font-size: 50px;
   overflow-x: hidden;
 }
@@ -23,15 +22,13 @@ h2 {
 .post {
   border: 0.5px solid #000000; 
     padding: 3px; 
-    width: 500px;
+    width: 460px;
     font-family: 'Bon-Mono';
     font-size: 40px;
     height: fit-content;
     padding: 20px;
     
 }
-
-
 
 .timestamp {
     font-size: 0.8em;
@@ -58,6 +55,7 @@ img {
     align-items: center;
     gap: 10px;
     flex-direction: column;
+  
 }
 
 
@@ -225,6 +223,194 @@ h1 {
   position: fixed;
   top: 0px;
   margin-left: 20px;
-  
+  font-family: 'Bon-Mono';
 }
-  
+
+/* About Seite-Styling */
+      
+      .container {
+        display: flex;
+        justify-content: center; /* Horizontale Zentrierung */
+        align-items: center; /* Vertikale Zentrierung */
+        flex-direction: column; /* Für vertikales Layout */
+        width: 100vw; /* Volle Breite des Viewports */
+        height: 100vh; /* Volle Höhe des Viewports */
+        position: absolute; /* Container bleibt im Viewport */
+        top: 0;
+        left: 0;
+        margin-top: 4300px;
+     
+      }
+      .container1 {
+        display: flex;
+        justify-content: center; /* Horizontale Zentrierung */
+        align-items: center; /* Vertikale Zentrierung */
+        flex-direction: column; /* Für vertikales Layout */
+        width: 100vw; /* Volle Breite des Viewports */
+        height: 100vh; /* Volle Höhe des Viewports */
+        position: absolute; /* Container bleibt im Viewport */
+        top: 0;
+        left: 0;
+     
+      }
+      
+      .image {
+        width: 500px;
+        
+      }
+      
+      a {
+        color: rgb(0, 0, 0);
+       
+      }
+      
+      svg {
+        position: fixed;
+        z-index: 2; 
+        opacity: 40%;
+        pointer-events: none;
+      }
+      
+    
+      .svg1 {
+        top: 0; 
+        left: 500px; 
+        width: 500px;
+        height: auto;
+        
+      }
+      
+    
+      .svg2 {
+        top: 200px; 
+        left: 50px; 
+        width: 500px; 
+        height: auto;
+      }
+      
+      .svg3 {
+        top: 80px; 
+        left: 900px; 
+        width: 500px; 
+        height: auto;
+        opacity: 40%;
+      }
+      .svg4 {
+        top: -10px; 
+        left: 800px; 
+        width: 200px; 
+        height: auto;
+        opacity: 100%;
+        display: none;
+      }
+    
+      .svg5 {
+        top: -200px; 
+        left: 60px; 
+        width: 2000px; 
+        height: auto;
+        opacity: 40%;
+      }
+    
+      .svg6 {
+        top: 0px; 
+        left: 60px; 
+        width: 800px; 
+        height: auto;
+        opacity: 40%;
+      }
+    
+      path {
+        fill: none;
+        stroke-width: 1;
+        stroke-linecap: round;
+        stroke-dasharray: 0;
+        stroke-dashoffset: 0;
+      }
+      
+      .animated-path {
+        animation: draw 230s linear forwards;
+        stroke: #908c8c; /* Grün */
+        animation-iteration-count: 1;
+      }
+      
+      .animated-path2 {
+        animation: draw 250s linear forwards;
+        stroke: #e96f6f; /* Lila */
+        animation-iteration-count: 1;
+      }
+    
+      .animated-path3 {
+        animation: draw 260s linear forwards;
+        stroke: #db805f; /* Lila */
+       
+      }
+    
+      .animated-path4 {
+        animation: draw 300s linear forwards;
+        stroke: #bc6161; /* Lila */
+       
+      }
+    
+      .animated-path5 {
+        animation: draw 300s linear forwards;
+        stroke: #b0d574; /* Lila */
+       
+      }
+    
+      .animated-path6 {
+        animation: draw 400s linear forwards;
+        stroke: #d5ed7b; /* Lila */
+       
+      }
+      
+      @keyframes draw {
+        from {
+          stroke-dasharray: 0, 500;
+        }
+        to {
+          stroke-dasharray: 500, 0;
+        }
+      }
+    
+     .text {
+      
+      width: 460px;
+      padding: 20px;
+      font-size: 40px;
+      word-spacing: -0.05em;
+      letter-spacing: -0.02em;
+      border-width: 0.5px;
+      border-style: solid;
+      border-color: black;
+    
+      }
+    
+      .text1 {
+        width: 460px;
+        padding: 20px;
+        font-size: 40px;
+        word-spacing: -0.05em;
+        letter-spacing: -0.02em;
+        border-width: 0.5px;
+        border-style: solid;
+        border-color: black;
+         }
+         
+
+ 
+         .bilder img {
+            filter: grayscale(100%);
+        }
+
+        .beschreibung {
+            width: 460px;
+            padding: 20px;
+            font-size: 30px;
+            word-spacing: -0.05em;
+            letter-spacing: -0.02em; 
+            border-width: 0.5px;
+            border-style: solid;
+            border-color: black;
+            
+        }
