--- a/style.css
+++ b/style.css
@@ -4,25 +4,24 @@
 }
 
 body {
-background-size: contain;
-background-repeat: no-repeat;
-background-attachment: fixed;
-font-family: 'Bon-Mono';
-background-color: rgb(255, 255, 255);
-font-size: 50px;
-overflow-x: hidden;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  font-family: 'Bon-Mono';
+  background-color: rgb(255, 255, 255);
+  font-size: 50px;
+  overflow-x: hidden;
 }
 
 .überschrift-garden {
-color: rgb(0, 0, 0);
-text-align: left;
-font-size: 5vw;
-position: fixed;
-top: 2vw;
-margin-left: 2vw;
-font-family: 'Bon-Mono';
-line-height: 0.6em;
-
+  color: rgb(0, 0, 0);
+  text-align: left;
+  font-size: 5vw;
+  position: fixed;
+  top: 2vw;
+  margin-left: 2vw;
+  font-family: 'Bon-Mono';
+  line-height: 0.6em;
 }
 
 .überschrift3 {
@@ -30,14 +29,14 @@ line-height: 0.6em;
   text-align: left;
   font-size: 17px;
 }
+
 .post {
-border: 0.5px solid #000000; 
-  padding: 3px; 
+  border: 0.5px solid #000000; 
+  padding: 20px; 
   width: 460px;
   font-family: 'Bon-Mono';
   font-size: 3vw;
   height: fit-content;
-  padding: 20px;
   max-width: 90%;
 }
 
@@ -49,15 +48,13 @@ border: 0.5px solid #000000;
 }
 
 img {
-  
   width: 80%;
   max-width: 100%;
   height: auto;
 }
 
 .image-container {
- 
-  text-align: center
+  text-align: center;
 }
 
 #posts {
@@ -67,14 +64,11 @@ img {
   align-items: center;
   gap: 10px;
   flex-direction: column;
-
 }
 
 hr {
-
   border-top: 1px dashed rgb(0, 0, 0);
 }
-
 
 /* Button-Styling */
 .button {
@@ -112,132 +106,97 @@ hr {
   font-family: 'Bon-Mono';
   text-align: center;
   font-size: 22px;
-
 }
 
 .allgemeine-infos {
-font-size: 0.8em;
+  font-size: 0.8em;
   color: #000000;
   margin-bottom: 5px;
   text-align: center;
-
 }
 
 .summe {
   font-family: 'Bon-Mono';
   text-align: center;
   font-size: 22px;
-
 }
 
 /* Hintergrund Animation Our Garden*/ 
-
 svg {
-position: fixed;
-z-index: 2; 
-pointer-events: none;
+  position: fixed;
+  z-index: 2; 
+  pointer-events: none;
 }
 
-.svg1 {
-top: 0; /* Abstand von oben */
-left: 600px; /* Abstand von links */
-width: 500px;
-height: auto;
-opacity: 40%;
+.svg1, .svg2, .svg3, .svg4, .svg5 {
+  position: fixed;
+  width: auto;
+  height: auto;
+  opacity: 40%;
+}
 
-} 
-.svg2 {
-top: 0; /* Abstand von oben */
-left: 700px; /* Abstand von links */
-width: 700px;
-height: auto;
-opacity: 40%;
-
-} 
-
-.svg3 {
-top: 0; /* Abstand von oben */
-left: 0px; /* Abstand von links */
-width: 800px;
-height: auto;
-opacity: 40%;
-
-} 
-.svg4 {
-top: 500; /* Abstand von oben */
-left: 0px; /* Abstand von links */
-width: 500px;
-height: auto;
-opacity: 40%;
-
-} 
-
-.svg5 {
-top: 0; /* Abstand von oben */
-left: 80px; /* Abstand von links */
-width: 1400px;
-height: auto;
-opacity: 40%;
-
-} 
+.svg1 { top: 0; left: 600px; width: 500px; }
+.svg2 { top: 0; left: 700px; width: 700px; }
+.svg3 { top: 0; left: 0px; width: 800px; }
+.svg4 { top: 500px; left: 0px; width: 500px; }
+.svg5 { top: 0; left: 80px; width: 1400px; }
 
 path {
-fill: none;
-stroke-width: 1;
-stroke-linecap: round;
-stroke-dasharray: 0;
-stroke-dashoffset: 0;
+  fill: none;
+  stroke-width: 1;
+  stroke-linecap: round;
+  stroke-dasharray: 0;
+  stroke-dashoffset: 0;
 }
 
 .animated-path {
-animation: draw 130s linear forwards;
-stroke: #584c8f; 
-animation-iteration-count: 1;
-display: none;
+  animation: draw 130s linear forwards;
+  stroke: #584c8f; 
+  animation-iteration-count: 1;
+  display: none;
 }
 
 .animated-path2 {
-animation: draw 130s linear infinite;
-stroke: #584c8f;
-animation-direction: alternate;
+  animation: draw 130s linear infinite;
+  stroke: #584c8f;
+  animation-direction: alternate;
 }
 
 .animated-path3 {
-animation: draw 130s linear infinite;
-stroke: #553838;
-animation-direction: alternate;
+  animation: draw 130s linear infinite;
+  stroke: #553838;
+  animation-direction: alternate;
 }
 
 .animated-path4 {
-animation: draw 130s linear infinite;
-stroke: #5a6dff; 
-animation-direction: alternate;
+  animation: draw 130s linear infinite;
+  stroke: #5a6dff; 
+  animation-direction: alternate;
 }
+
 .animated-path5 {
-animation: draw 130s linear infinite;
-stroke: #383547;
-animation-direction: alternate;
+  animation: draw 130s linear infinite;
+  stroke: #383547;
+  animation-direction: alternate;
 }
 
 @keyframes draw {
-from {
-  stroke-dasharray: 0, 500;
+  from {
+    stroke-dasharray: 0, 500;
+  }
+  to {
+    stroke-dasharray: 500, 0;
+  }
 }
-to {
-  stroke-dasharray: 500, 0;
-}
-}
-
 
 /* About Seite-Styling */
-
 .einleitung {
-margin-top: 300px;
-font-size: 35px;
-word-spacing: -0.05em;
-letter-spacing: -0.02em;
-display: flex;
-height: 65vh;
+  margin-top: 300px;
+  font-size: 35px;
+  word-spacing: -0.05em;
+  letter-spacing: -0.02em;
+  display: flex;
+  height: 65vh;
 }
 
 .überschrift-about {
@@ -252,22 +211,21 @@ height: 65vh;
 }
 
 .textüberschrift-about {
-text-align: left;
-font-size: 30px;
-width: 50%;
-font-size: 35px;
-word-spacing: -0.05em;
-letter-spacing: -0.02em;
-display: flex;
+  text-align: left;
+  font-size: 35px;
+  word-spacing: -0.05em;
+  letter-spacing: -0.02em;
+  display: flex;
+  width: 50%;
 }
-    
+
 .container {
   display: flex;
   height: 100vh;
 }
 
 .container:nth-of-type(2) {
-  margin-bottom: 500px; /* Abstand zwischen Abschnitt 2 und 3 */
+  margin-bottom: 500px;
 }
 
 .text1, .text {
@@ -314,117 +272,119 @@ display: flex;
   padding-top: 20px;
 }
 
-
 /* Hintergrund Animation About Seite*/ 
-    svg {
-      position: fixed;
-      z-index: 2; 
-      opacity: 40%;
-      pointer-events: none;
-    }
-    
-  
-    .svg1 {
-      top: 0; 
-      left: 500px; 
-      width: 500px;
-      height: auto;
-      
-    }
-    
-  
-    .svg2 {
-      top: 200px; 
-      left: 50px; 
-      width: 500px; 
-      height: auto;
-    }
-    
-    .svg3 {
-      top: 80px; 
-      left: 900px; 
-      width: 500px; 
-      height: auto;
-      opacity: 40%;
-    }
-    .svg4 {
-      top: -10px; 
-      left: 800px; 
-      width: 200px; 
-      height: auto;
-      opacity: 100%;
-      display: none;
-    }
-  
-    .svg5 {
-      top: -200px; 
-      left: 60px; 
-      width: 2000px; 
-      height: auto;
-      opacity: 40%;
-    }
-  
-    .svg6 {
-      top: 0px; 
-      left: 60px; 
-      width: 800px; 
-      height: auto;
-      opacity: 40%;
-    }
-  
-    path {
-      fill: none;
-      stroke-width: 1;
-      stroke-linecap: round;
-      stroke-dasharray: 0;
-      stroke-dashoffset: 0;
-    }
-    
-    .animated-path {
-      animation: draw 230s linear infinite;
-      stroke: #908c8c; /* Grün */
-      animation-direction: alternate;
-    }
-    
-    .animated-path2 {
-      animation: draw 250s linear infinite;
-      stroke: #e96f6f; /* Lila */
-      animation-direction: alternate;
-    }
-  
-    .animated-path3 {
-      animation: draw 260s linear infinite;
-      stroke: #db805f; /* Lila */
-      animation-direction: alternate;
-     
-    }
-  
-    .animated-path4 {
-      animation: draw 300s linear infinite;
-      stroke: #bc6161; /* Lila */
-      animation-direction: alternate;
-     
-    }
-  
-    .animated-path5 {
-      animation: draw 300s linear infinite;
-      stroke: #b0d574; /* Lila */
-      animation-direction: alternate;
-     
-    }
-  
-    .animated-path6 {
-      animation: draw 400s linear infinite;
-      stroke: #d5ed7b; /* Lila */
-      animation-direction: alternate;
-     
-    }
-    
-    @keyframes draw {
-      from {
-        stroke-dasharray: 0, 500;
-      }
-      to {
-        stroke-dasharray: 500, 0;
-      }
-    }
+.svg1 { top: 0; left: 500px; width: 500px; }
+.svg2 { top: 200px; left: 50px; width: 500px; }
+.svg3 { top: 80px; left: 900px; width: 500px; }
+.svg4 { top: -10px; left: 800px; width: 200px; opacity: 100%; display: none; }
+.svg5 { top: -200px; left: 60px; width: 2000px; }
+.svg6 { top: 0px; left: 60px; width: 800px; }
+
+path {
+  fill: none;
+  stroke-width: 1;
+  stroke-linecap: round;
+  stroke-dasharray: 0;
+  stroke-dashoffset: 0;
+}
+
+.animated-path {
+  animation: draw 230s linear infinite;
+  stroke: #908c8c;
+  animation-direction: alternate;
+}
+
+.animated-path2 {
+  animation: draw 250s linear infinite;
+  stroke: #e96f6f;
+  animation-direction: alternate;
+}
+
+.animated-path3 {
+  animation: draw 260s linear infinite;
+  stroke: #db805f;
+  animation-direction: alternate;
+}
+
+.animated-path4 {
+  animation: draw 300s linear infinite;
+  stroke: #bc6161;
+  animation-direction: alternate;
+}
+
+.animated-path5 {
+  animation: draw 300s linear infinite;
+  stroke: #b0d574;
+  animation-direction: alternate;
+}
+
+.animated-path6 {
+  animation: draw 400s linear infinite;
+  stroke: #d5ed7b;
+  animation-direction: alternate;
+}
+
+@keyframes draw {
+  from {
+    stroke-dasharray: 0, 500;
+  }
+  to {
+    stroke-dasharray: 500, 0;
+  }
+}
+
+/* ----------------------------------
+    Mobile Anpassung
+----------------------------------- */
+@media (max-width: 768px) {
+
+  body {
+    font-size: 30px;
+  }
+
+  .container {
+    flex-direction: column;
+    height: auto;
+    margin-right: 72px;
+  }
+
+  .text1, .text, .textüberschrift-about .bilder, .beschreibung {
+    width: 100%;
+    height: auto;
+    font-size: 28px;
+    text-align: left;
+    margin-left: -1px;
+  }
+
+  .images-section {
+    width: 100%;
+    height: auto;
+    overflow: visible;
+    padding-top: 0;
+  }
+
+  .einleitung {
+    flex-direction: column;
+    height: auto;
+    margin-top: 150px;
+    margin-right: 72px;
+  }
+
+  .überschrift-garden, .überschrift-about {
+    font-size: 8vw;
+    top: 2vw;
+    margin-left: 3vw;
+  }
+
+  .button, #about-button {
+    font-size: 28px;
+    padding: 8px 16px;
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .bilder img {
+    width: 100%;
+  }
+
+}
