--- a/style.css
+++ b/style.css
@@ -367,7 +367,7 @@ path {
     margin-right: 72px;
   }
 
-  .überschrift-garden, .überschrift-about {
+  .überschrift-about {
     font-size: 8vw;
     top: 2vw;
     margin-left: 4vw;
