--- a/style.css
+++ b/style.css
@@ -353,7 +353,7 @@ path {
     margin-left: -1px;
   }
 
-  .images-section {
+  .images-section .post {
     width: 100%;
     height: auto;
     overflow: visible;
