--- a/style.css
+++ b/style.css
@@ -3,8 +3,9 @@
   src: url(merchant-copy-font/MerchantCopy-GOXq.ttf)
 }
 
+
 body {
-  background-size: contain;
+  background-size: 100vh;
   background-repeat: no-repeat;
   background-attachment: fixed;
   font-family: 'Bon-Mono';
@@ -13,21 +14,13 @@ body {
   overflow-x: hidden;
 }
 
-.überschrift-garden {
-  color: rgb(0, 0, 0);
-  text-align: left;
-  font-size: 5vw;
-  position: fixed;
-  top: 2vw;
-  margin-left: 2vw;
-  font-family: 'Bon-Mono';
-  line-height: 0.6em;
-}
+
 
 .überschrift3 {
   font-family: 'Bon-Mono';
   text-align: left;
-  font-size: 17px;
+  font-size: 25px;
+
 }
 
 .post {
@@ -38,6 +31,7 @@ body {
   font-size: 3vw;
   height: fit-content;
   max-width: 90%;
+  text-align: center;
 }
 
 .timestamp {
@@ -64,6 +58,7 @@ img {
   align-items: center;
   gap: 10px;
   flex-direction: column;
+  text-align: center;
 }
 
 hr {
@@ -97,14 +92,6 @@ hr {
 
 
 
-.überschrift {
-  margin-top: 30px;
-  margin-bottom: 30px;
-  font-family: 'Bon-Mono';
-  text-align: center;
-  font-size: 22px;
-}
-
 .allgemeine-infos {
   font-size: 0.8em;
   color: #000000;
@@ -130,6 +117,10 @@ svg {
   width: auto;
   height: auto;
   opacity: 40%;
+  pointer-events: none;
+  max-width: 100vw;
+  overflow: hidden;
+  clip-path: inset(0 0 0 0);
 }
 
 .svg1 { top: 0; left: 600px; width: 500px; }
@@ -196,20 +187,11 @@ path {
   height: 65vh;
 }
 
-.überschrift-about {
-  color: rgb(0, 0, 0);
-  text-align: left;
-  font-size: 5vw;
-  position: fixed;
-  top: 2vw;
-  margin-left: 2.3vw;
-  font-family: 'Bon-Mono';
-  line-height: 0.6em;
-}
 
-.textüberschrift-about {
+
+.überschrift-about {
   text-align: left;
-  font-size: 35px;
+  font-size: 70px;
   word-spacing: -0.05em;
   letter-spacing: -0.02em;
   display: flex;
@@ -270,12 +252,42 @@ path {
 }
 
 /* Hintergrund Animation About Seite*/ 
-.svg1 { top: 0; left: 500px; width: 500px; }
-.svg2 { top: 200px; left: 50px; width: 500px; }
-.svg3 { top: 80px; left: 900px; width: 500px; }
-.svg4 { top: -10px; left: 800px; width: 200px; opacity: 100%; display: none; }
-.svg5 { top: -200px; left: 60px; width: 2000px; }
-.svg6 { top: 0px; left: 60px; width: 800px; }
+.svg1 { 
+top: 0; 
+left: 500px; 
+width: 500px; 
+}
+
+.svg2 { 
+  top: 200px; 
+  left: 50px; 
+  width: 500px; 
+}
+
+.svg3 {
+top: 80px; 
+left: 900px; 
+width: 500px; 
+}
+
+.svg4 { 
+  top: -10px; 
+  left: 800px; 
+  width: 200px; 
+  opacity: 100%; 
+  display: none; 
+}
+.svg5 { 
+  top: -200px; 
+  left: 60px; 
+  width: 2000px; 
+}
+
+.svg6 { 
+  top: 0px; 
+  left: 60px; 
+  width: 800px; 
+}
 
 path {
   fill: none;
@@ -337,6 +349,10 @@ path {
 
   body {
     font-size: 30px;
+    width: 100vw;
+    overflow-x: hidden;
+    margin: 0;
+  padding: 0;
   }
 
   .container {
@@ -344,8 +360,26 @@ path {
     height: auto;
     margin-right: 72px;
   }
+  #posts {
+  width: 100vw;
+  overflow-x: hidden;
+  margin: 0;
+   padding: 0;
+   display: flex;
+   flex-flow: wrap;
+   gap: 10px;
+   justify-content: center;
+   text-align: center;
+    }
 
-  .text1, .text, .textüberschrift-about .bilder, .beschreibung {
+  .post {
+  width: 50%;
+  text-align: center;
+  justify-content: center; 
+
+ 
+  }
+  .text1, .text, .bilder, .beschreibung {
     width: 100%;
     height: auto;
     font-size: 28px;
@@ -353,7 +387,7 @@ path {
     margin-left: -1px;
   }
 
-  .images-section #posts {
+  .images-section {
     width: 100%;
     height: auto;
     overflow: visible;
@@ -368,7 +402,7 @@ path {
   }
 
   .überschrift-about {
-    font-size: 8vw;
+    font-size: 12vw;
     top: 2vw;
     margin-left: 4vw;
   }
@@ -382,6 +416,11 @@ path {
 
   .bilder img {
     width: 100%;
+  }
+  .überschrift3 {
+    font-family: 'Bon-Mono';
+    text-align: left;
+    font-size: 10px;
   }
 
 }
