--- a/style.css
+++ b/style.css
@@ -375,7 +375,9 @@ path {
   .post {
   width: 50%;
   text-align: center;
-  justify-content: center; 
+  justify-content: center;
+  font-size: 5vw;
+
 
  
   }
@@ -420,7 +422,7 @@ path {
   .überschrift3 {
     font-family: 'Bon-Mono';
     text-align: left;
-    font-size: 10px;
+    font-size: 4vw;
   }
 
 }
