--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body {
 }
 
 .timestamp {
-  font-size: 0.8em;
+  font-size: 25px;
   color: #000000;
   margin-bottom: 5px;
   text-align: center;
